07-app-tls/app-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: app-nginx
        image: nginx:stable-alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: app-nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        - name: app-nginx-html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: app-nginx-config
        configMap:
          name: app-nginx-config
      - name: app-nginx-html
        persistentVolumeClaim:
          claimName: app-nginx-storage-claim
---
apiVersion: v1
kind: Service
metadata:
  name: app-nginx
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
